--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3702,7 +3702,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_ottoman_required_garrison_factor_samos_yes:0 "\n£garrison_texticon  Required Garrisons: [?974.TUR_ottoman_required_garrison_factor|=0%-]"
  TUR_ottoman_recruitable_population_factor_samos_yes:0 "\n£manpower_texticon  Recruitable Population: [?974.TUR_ottoman_recruitable_population_factor|=2%+]"
  TUR_ottoman_state_production_speed_buildings_factor_samos_yes:0 "\n£construction_speed_texticon  Local Construction Speed: [?974.TUR_ottoman_state_production_speed_buildings_factor|=0%+]"
- TUR_ottoman_state_autonomous_vilayet_samos_yes:0 "\n\n§LThis state is an §YSemi-Autonomous Vilayet§!. The following effects on the state are:§![TUR_ottoman_state_autonomous_vilayet_modifier_samos]"
+ TUR_ottoman_state_autonomous_vilayet_samos_yes:0 "\n\n§LThis state is an §YAutonomous Vilayet§!. The following effects on the state are:§![TUR_ottoman_state_autonomous_vilayet_modifier_samos]"
  TUR_ottoman_state_autonomous_vilayet_modifier_samos_yes:0 "[TUR_ottoman_state_autonomous_vilayet_local_resources_factor_samos][TUR_ottoman_state_autonomous_vilayet_local_factories_samos][TUR_ottoman_state_autonomous_vilayet_compliance_growth_samos][TUR_ottoman_state_autonomous_vilayet_recruitable_population_factor_samos][TUR_ottoman_state_autonomous_vilayet_stability_factor_samos]"
  TUR_ottoman_state_autonomous_vilayet_local_resources_factor_samos_yes:0 "\n£resources_texticon  Resource Gain Efficiency: [?ROOT.TUR_ottoman_semi_autonomy_local_resources_factor|=2%+]"
  TUR_ottoman_state_autonomous_vilayet_local_factories_samos_yes:0 "\n£civ_factory  Local Factories: [?ROOT.TUR_ottoman_semi_autonomy_local_factories|=0%+]"
@@ -3734,7 +3734,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_ottoman_required_garrison_factor_ikaria_yes:0 "\n£garrison_texticon  Required Garrisons: [?975.TUR_ottoman_required_garrison_factor|=0%-]"
  TUR_ottoman_recruitable_population_factor_ikaria_yes:0 "\n£manpower_texticon  Recruitable Population: [?975.TUR_ottoman_recruitable_population_factor|=2%+]"
  TUR_ottoman_state_production_speed_buildings_factor_ikaria_yes:0 "\n£construction_speed_texticon  Local Construction Speed: [?975.TUR_ottoman_state_production_speed_buildings_factor|=0%+]"
- TUR_ottoman_state_autonomous_vilayet_ikaria_yes:0 "\n\n§LThis state is an §YSemi-Autonomous Vilayet§!. The following effects on the state are:§![TUR_ottoman_state_autonomous_vilayet_modifier_ikaria]"
+ TUR_ottoman_state_autonomous_vilayet_ikaria_yes:0 "\n\n§LThis state is an §YAutonomous Vilayet§!. The following effects on the state are:§![TUR_ottoman_state_autonomous_vilayet_modifier_ikaria]"
  TUR_ottoman_state_autonomous_vilayet_modifier_ikaria_yes:0 "[TUR_ottoman_state_autonomous_vilayet_local_resources_factor_ikaria][TUR_ottoman_state_autonomous_vilayet_local_factories_ikaria][TUR_ottoman_state_autonomous_vilayet_compliance_growth_ikaria][TUR_ottoman_state_autonomous_vilayet_recruitable_population_factor_ikaria][TUR_ottoman_state_autonomous_vilayet_stability_factor_ikaria]"
  TUR_ottoman_state_autonomous_vilayet_local_resources_factor_ikaria_yes:0 "\n£resources_texticon  Resource Gain Efficiency: [?ROOT.TUR_ottoman_semi_autonomy_local_resources_factor|=2%+]"
  TUR_ottoman_state_autonomous_vilayet_local_factories_ikaria_yes:0 "\n£civ_factory  Local Factories: [?ROOT.TUR_ottoman_semi_autonomy_local_factories|=0%+]"
