--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8989,7 +8989,10 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_england.263.t:0 "British capture Fao"
  ww1_england.263.d:0 "Distressing news comes from the Fao Peninsula. British forces launched a surprise landing operation and successfully captured the Fao Fortress. Despite the valiant efforts of the defenders, the enemy's superior numbers and preparation overwhelmed the positions. The garrison deserted after their main officer, Captain Ibn Abdullah, was killed."
  ww1_england.263.a:0 "We must reinforce Mesopotamia!"
-
+ ww1_england.264.t:0 "Ottomans Ask for Armistice"
+ ww1_england.264.d:0 "The Ottoman Empire, exhausted from the war in the middle east and the caucasus, has officially asked for an armistice."
+ ww1_england.264.a:0 "The middle eastern theatre comes to an end!"
+ ww1_england.264.b:0 "We will end this war in [TUR.Capital.GetCapitalVictoryPointName]"
 
  #the following events relate to Egypt and the British Collapse, and don't all directly relate to Britain.
  ww1_england.52.t:0 "Egypt breaks from our rule!"
