--- a/localisation/english/ww1_equipment_l_english.yml
+++ b/localisation/english/ww1_equipment_l_english.yml
@@ -205,41 +205,44 @@
  
  #FRA_tank_design:0 ""
  #FRA_tank_design_short:0 ""
+####################################################################################################### FRANCE FRENCH CHARS
  FRA_light_tank_equipment_1:0 "Renault FT"
  FRA_light_tank_equipment_1_short:0 "FT"
  FRA_light_tank_equipment_1_canon:0 "FT Char Canon"
- FRA_light_tank_equipment_1_signal:0 "Renault FT TSF"
- FRA_light_tank_equipment_1_signal_short:0 "FT TSF"
- FRA_light_tank_artillery_equipment_1:0 "Renault FT 75 BS"
- FRA_light_tank_artillery_equipment_1_short:0 "FT 75 BS"
  FRA_light_tank_equipment_2:0 "Renault FT (1918)"
  FRA_light_tank_equipment_2_short:0 "FT (1918)"
- FRA_light_tank_artillery_equipment_2:0 "Char Peugeot"
- FRA_light_tank_artillery_equipment_2_short:0 "Char Peugeot"
  FRA_light_tank_equipment_3:0 "Renault NC-1"
  FRA_light_tank_equipment_3_short:0 "NC-1"
+
+ FRA_light_tank_equipment_1_signal:0 "Renault FT TSF"
+ FRA_light_tank_equipment_1_signal_short:0 "FT TSF"
+
+ FRA_light_tank_artillery_equipment_1:0 "Renault FT 75 BS"
+ FRA_light_tank_artillery_equipment_1_short:0 "FT 75 BS"
+ FRA_light_tank_artillery_equipment_2:0 "Char Peugeot"
+ FRA_light_tank_artillery_equipment_2_short:0 "Char Peugeot"
+
  FRA_medium_tank_equipment_1:0 "Schneider CA"
  FRA_medium_tank_equipment_1_short:0 "Schneider CA"
- FRA_light_tank_equipment_1:0 "Renault FT BS"
- FRA_light_tank_equipment_1_short:0 "FT BS"
- FRA_medium_tank_artillery_equipment_1:0 "Canon de 220 L mle 1917 Schneider"
- FRA_medium_tank_artillery_equipment_1_short:0 "220 L mle 1917 Schneider"
  FRA_medium_tank_equipment_2:0 "Saint-Chamond"
  FRA_medium_tank_equipment_2_short:0 "St Chamond"
+
+ FRA_medium_tank_artillery_equipment_1:0 "Canon de 220 L mle 1917 Schneider"
+ FRA_medium_tank_artillery_equipment_1_short:0 "220 L mle 1917 Schneider"
  FRA_medium_tank_artillery_equipment_2:0 "Mortier 280 mm TR de Schneider sur affût-chenilles St Chamond"
  FRA_medium_tank_artillery_equipment_2_short:0 "280 mm sur affût chenillé St. Chamond"
- #FRA_medium_tank_equipment_3:0 ""
- #FRA_medium_tank_equipment_3_short:0 ""
+
  FRA_heavy_tank_equipment_1:1 "Saint-Chamond 25t"
  FRA_heavy_tank_equipment_1_short:1 "St Chamond 25t"
- FRA_heavy_tank_artillery_equipment_1:0 "Canon de 194 GPF"
- FRA_heavy_tank_artillery_equipment_1_short:0 "Canon de 194 GPF"
  FRA_heavy_tank_equipment_2:1 "FCM 1A"
  FRA_heavy_tank_equipment_2_short:1 "FCM 1A"
- #FRA_heavy_tank_equipment_3:1 ""
- #FRA_heavy_tank_equipment_3_short:1 ""
+
+ FRA_heavy_tank_artillery_equipment_1:0 "Canon de 194 GPF"
+ FRA_heavy_tank_artillery_equipment_1_short:0 "Canon de 194 GPF"
+
  FRA_super_heavy_tank_equipment_1:1 "Char 2C"
  FRA_super_heavy_tank_equipment_1_short:0 "FCM 2C"
+#######################################################################################################
  
  GER_tank_design:0 "Orion-Wagen"
  GER_tank_design_short:0 "Orion-Wagen"
