--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7377,6 +7377,7 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  FRA_ww1_d1_development:0 "D1 Development"
  FRA_ww1_b1_project:0 "B1 Project"
  FRA_focus_on_armored_production:0 "Focus on Armored Production"
+ FRA_focus_renault_war_effort:0 "Renault War Effort"
 
  FRA_ww1_support_british_socialists:0 "Support [ENG.getAdjective] Socialists"
  FRA_ww1_support_british_socialists_desc:0 "The world revolution has touched Britain, our duty is to help our communist brothers around the world, including England."
