--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -3168,6 +3168,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_ikaria.1.t:0 "Ikarian Greek Revolt"
  ww1_ikaria.1.d:0 "A Greek revolt broke out on the island of Ikaria, one of the islands in the Aegean Sea. They drove out the Turkish garrison and seized control of the island. George N. Spanos, who was killed during a ambush attack by our troops, is hournored as the hero of the so-called Ikaria Revolution."
  ww1_ikaria.1.a:0 "Put them down!"
+ ww1_ikaria.1.tt:0 "Modify [TUR_get_state_minority] by\nResistance Target: §R+100%§!"
  ww1_ikaria.2.t:0 "Independent Greek State of Ikaria Acquired"
  ww1_ikaria.2.d:0 "Greeks on the island of Ikaria rebelled against Turkish rule. We are officially at war with the Turks, so we have to actively engage with the Greeks here, and they are willing to do the same."
  ww1_ikaria.2.a:0 "Wonderful reunion."
