--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4608,15 +4608,15 @@
  TUR_law_on_churches_tt4:0 "Unlocks §YEstablish Order in Macedonia§! Decisions\nUnlocks §YIntegrate Macedonia§! Decisions\n"
  TUR_increase_taxes_on_albanians:0 "Increase Taxes on Albanians"
  TUR_increase_taxes_on_albanians_desc:0 "Albanians have long been an exception to our taxation policies due to their religion. Yet under the new centralization policies of our empire, no reigious category shall be an exception to taxation. Though it'll be unpopular among Albanians, and strengthen their resistance, centralization is needed for the future of our empire."
- TUR_increase_taxes_on_albanians_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\nResistance Target: §R+20%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
+ TUR_increase_taxes_on_albanians_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
  TUR_increase_taxes_on_albanians_tt2:0 "Unlocks §YTax Collection in Albania§! Decisions"
  TUR_approve_grece_memorandum:0 "Approve Greçë Memorandum"
  TUR_approve_grece_memorandum_desc:0 "Twelve requests jointly written by Albanian representatives, Greçë Memorandum is a memorandum including several demands for the establishment of an autonomous Albanian province in the empire. Though our previous governments have tries to minimize its significance, Perhaps it's best to comply with the Demands and give Autonomy to Albanians."
- TUR_approve_grece_memorandum_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\nResistance Target: §G-30%§!\n\n"
+ TUR_approve_grece_memorandum_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §G-30%§!\n\n"
  TUR_approve_grece_memorandum_tt2:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.50%§!\n£war_support_modifiericons_texticon  War Support: §G+0.30%§!\n\n"
  TUR_centralize_albania:0 "Centralize Albania"
  TUR_centralize_albania_desc:0 "Recent rebellions in Albania back to back has became a large topic on its own. Though many in our government been proposing to give Albanians their own autonomous vilayet due to the rebellions that took the level of a crisis, most in our government oppose this. Centralization of Albania is necessary if we are to continue our hold in those lands."
- TUR_centralize_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\nResistance Target: §R+30%§!\nResistance Growth Speed: §G-10%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
+ TUR_centralize_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+30%§!\nResistance Growth Speed: §G-10%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
  TUR_centralize_albania_tt2:0 "Unlocks §YIncreased Albanian Conscriptions§! Decisions\nUnlocks §YImprove Albanian Garrisons§! Decisions\n"
  TUR_albanian_vilayet:0 "Albanian Vilayet"
  TUR_albanian_vilayet_desc:0 "Recent rebellions in Albania has proven that we need to introduce serious reforms in the region. As some within our government proposes, we should give autonomy to Albanians. With the creation of an Albanian vilayet, where Albanian language, cultures and customs will be permitted, we can bring an end to these long lasting revolts that has been plaguing the region."
@@ -4892,10 +4892,10 @@
  TUR_greek_deportations_tt:0 "Unlocks §YDeport Greeks§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_GRE  §YGreek Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
  TUR_line_up_armenian_traitors:0 "Line Up Armenian Traitors"
  TUR_line_up_armenian_traitors_desc:0 "Armenian popular movements for more rights, autonomy and independence has been a growing trend among some of our citizens. While using this as an excuse to exterminate our Armenian population is inhumane and unacceptible, punishing the guilty is totally valid. By doing so, we'll move towards further integration of such part of the population."
- TUR_line_up_armenian_traitors_tt:0 "Modify [TUR_get_state_minority] by\nDivision Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy £supply_texticon  Local Supplies: §G-5%§!\n\n"
- TUR_line_up_armenian_traitors_tt1:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nDivision Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy £supply_texticon  Local Supplies: §G-5%§!\n\n"
- TUR_line_up_armenian_traitors_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nDivision Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy £supply_texticon  Local Supplies: §G-5%§!\n\n"
- TUR_line_up_armenian_traitors_tt3:0 "Modify £ww1_flag_GEO  §YGeorgian Minority§! by\nDivision Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy £supply_texticon  Local Supplies: §G-5%§!\n\n"
+ TUR_line_up_armenian_traitors_tt:0 "Modify [TUR_get_state_minority] by\nDivision Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n\n"
+ TUR_line_up_armenian_traitors_tt1:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nDivision Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n\n"
+ TUR_line_up_armenian_traitors_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nDivision Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n\n"
+ TUR_line_up_armenian_traitors_tt3:0 "Modify £ww1_flag_GEO  §YGeorgian Minority§! by\nDivision Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n\n"
  TUR_temporary_law_of_deportation:0 "Temporary Law of Deportation"
  TUR_temporary_law_of_deportation_desc:0 "Our non-Muslim Christian populations in bordering regions possess great threat if we engage in war with neighboring countries. As the presence of Armenians, Assyrians and other Christians are already against the type of state we've envisioned to create, this threat is the perfect opportunity to blame everything on such minorities and forcefully relocate them from their hometowns in order to purify the region from its minorities."
  TUR_temporary_law_of_deportation_tt:0 "Unlocks §YExterminate Armenians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks §YMassacre Assyrians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
@@ -5703,7 +5703,7 @@
  TUR_massacre_greeks_in_the_peninsula_tt:0 "§YSuppression on Greeks§! decision can now also be taken for §Y[345.GetName]§!, §Y[731.GetName]§!, §Y[826.GetName]§!, §Y[758.GetName]§!, §Y[187.GetName]§!, §Y[185.GetName]§!, §Y[47.GetName]§!, §Y[186.GetName]§! and §Y[182.GetName]§!."
  TUR_extermination_of_macedonian_minorities_tt:0 "§YSuppression on South Slavs§! decision can now also be taken for §Y[788.GetName]§!, §Y[184.GetName]§!, §Y[225.GetName]§!, §Y[759.GetName]§!, §Y[203.GetName]§! and §Y[106.GetName]§!."
  TUR_massacre_in_serbia_tt:0 "§YSuppression on South Slavs§! decision can now also be taken for §Y[761.GetName]§!, §Y[760.GetName]§!, §Y[105.GetName]§!, §Y[104.GetName]§!, §Y[107.GetName]§!, §Y[809.GetName]§!, §Y[876.GetName]§! and §Y[821.GetName]§!."
- TUR_an_alliance_with_the_kurds_tt:0 "Modify £ww1_flag_KUR §YKurdish Minority§! as: Resistance Target: §G-15%§!"
+ TUR_an_alliance_with_the_kurds_tt:0 "Modify £ww1_flag_KUR §YKurdish Minority§! as: £political_violence_texticon  Resistance Target: §G-15%§!"
  TUR_an_alliance_with_the_kurds_tt2:0 "\nIf completed focus §YReorganize the Hamidiye§!:\nModify template cap of §YHamidiye Alayı§! by §G+7§!"
  TUR_an_alliance_with_the_kurds_tt4:0 "The negative stability and war support impact on §YSeperatist Sentiments§! caused by £ww1_flag_KUR §YKurdish Minority§! modifier will be neutralized."
  TUR_expanding_the_kurdish_policy_tt:0 "If completed focus §YForceful Assimilation of Kurds§!:"
@@ -9938,7 +9938,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  MSC_treaty_of_seeb: "Treaty of Seeb"
  MSC_invest_in_anglo_persian_company: "Anglo-Persian Oil Company"
  MSC_gun_purchase: "Arms Ourchase"
- MSC_declare_indepedence: "Down With the Colonizers"
+ MSC_declare_independence: "Down With the Colonizers"
  MSC_Imperial_ambitions: "Restore Omani Empire"
  MSC_demand_Somalia: "Demand Somalia"
  MSC_buy_zanzibar: "Purchase of Zanzibar"
