--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -118,6 +118,8 @@
  RUS_law_on_polish_zemstvo_sd: "Law on Polish Zemstvo"
  RUS_law_on_polish_zemstvo_sc: "Law on Polish Zemstvo"
  RUS_law_on_polish_zemstvo_passed_in_sc: "Law on Polish Zemstvo was passed in the State Council"
+ RUS_law_on_reformation_of_police_sd: "Law on Reformation of Police in the Empire"
+ RUS_law_on_reformation_of_police_sc: "Law on Reformation of Police in the Empire"
  RUS_new_conscription_law_sd: "Law on changing the Charter on military service"
  RUS_new_conscription_law_sc: "Law on changing the Charter on military service"
  RUS_grand_fleet_programme_sd: "Baltic Fleet enhanced shipbuilding programme"
@@ -128,15 +130,15 @@
  #Reforms Decisions
 
  RUS_reforms_decision_category: "Reforming Russia"
- RUS_reforms_decision_category_desc: "Russia has a lot of issues. One of the main issues it has is that any systemic change is either delayed as much as possible or is rejected completely for political concerns. This tendency had eventually led to the §RFirst Russian Revolution§! of 1905, which the monarchy has survived by introducing the October Manifesto, which limited Tsar's absolute power and created the §YState Duma§!. However, the October Manifesto did not turn Russian Empire into democracy and didn't solve the underlying economic conditions, which caused the §Rrevolution§! in the first place.\n\nTo reform Russia, we have to §Ypass legislation§! in the §YState Duma§! and §YState Council§! and §Yfund§! the reform efforts. It won't be a fast process, so we should balance our industial development and long-term reform.\n\nThe current progress of reforms is:\nAgrarian Reform - [?RUS_agrarian_reform_progress|.1%%Y]\nEducation Reform - [?RUS_education_reform_progress|.1%%Y]"
+ RUS_reforms_decision_category_desc: "Russia has a lot of issues. One of the main issues it has is that any systemic change is either delayed as much as possible or is rejected completely for political concerns. This tendency had eventually led to the §RFirst Russian Revolution§! of 1905, which the monarchy has survived by introducing the October Manifesto, which limited Tsar's absolute power and created the §YState Duma§!. However, the October Manifesto did not turn Russian Empire into democracy and didn't solve the underlying economic conditions, which caused the §Rrevolution§! in the first place.\n\nTo reform Russia, we have to §Ypass legislation§! in the §YState Duma§! and §YState Council§! and §Yfund§! the reform efforts. It won't be a fast process, so we should balance our industial development and long-term reform.\n\nThe current progress of reforms is:\nAgrarian Reform - [?RUS_agrarian_reform_progress|.1%%Y]\nEducation Reform - [?RUS_education_reform_progress|.1%%Y]\nPolice Reform - [?RUS_police_reform_progress|.1%%Y]"
  RUS_agrarian_reform_decision: "Agrarian Reform effort"
  RUS_complete_the_agrarian_reform: "Complete the Agrarian Reform"
  RUS_add_agrarian_reform_progress_tt: "Modifies §YAgrarian Reform§! progress by [?RUS_add_agrarian_reform_progress_var|.1%%Y=]."
  RUS_closer_to_finishing_agrarian_reform_tt: "§GWe will be closer to fully completing the Agrarian Reform§!."
  RUS_further_from_finishing_agrarian_reform_tt: "§RWe will be further from fully completing the Agrarian Reform§!."
  RUS_modify_agrarian_reform_decision_tt: "§GImproves§! the effectiveness of our §YAgrarian Reform decisions§!."
- RUS_100_agrarian_reform_progress: "Has §Y100.00%§! of the §YAgrarian Reform§! progress"
- RUS_not_100_agrarian_reform_progress: "Not: Has §Y100.00%§! of the §YAgrarian Reform§! progress"
+ RUS_100_agrarian_reform_progress: "Has §Y100.0%§! of the §YAgrarian Reform§! progress"
+ RUS_not_100_agrarian_reform_progress: "Not: Has §Y100.0%§! of the §YAgrarian Reform§! progress"
  RUS_remove_agrarian_idea_tt: "§GWe will complete the Agrarian Reform§!"
  RUS_increased_funding_for_agrarian_reform: "Increased funding for the Agrarian Reform"
  RUS_increased_funding_for_agrarian_reform_tt: "§GTemporarily improves§! the effectiveness of our §YAgrarian Reform decisions§!."
@@ -144,11 +146,17 @@
  RUS_complete_the_education_reform: "Complete the Education Reform"
  RUS_add_education_reform_progress_tt: "Modifies §YEducation Reform§! progress by [?RUS_add_education_reform_progress_var|.1%%Y=].\n§GWe will be closer to fully completing the Education Reform§!."
  RUS_modify_education_reform_decision_tt: "§GImproves§! the effectiveness of our §YEducation Reform decisions§!."
- RUS_100_education_reform_progress: "Has §Y100.00%§! of the §YEducation Reform§! progress"
- RUS_not_100_education_reform_progress: "Not: Has §Y100.00%§! of the §YEducation Reform§! progress"
+ RUS_100_education_reform_progress: "Has §Y100.0%§! of the §YEducation Reform§! progress"
+ RUS_not_100_education_reform_progress: "Not: Has §Y100.0%§! of the §YEducation Reform§! progress"
  RUS_remove_illiteracy_idea_tt: "§GWe will complete the Education Reform§!"
  RUS_increased_funding_for_education_reform: "Increased funding for the Education Reform"
  RUS_increased_funding_for_education_reform_tt: "§GTemporarily improves§! the effectiveness of our §YEducation Reform decisions§!."
+ RUS_police_reform_decision: "Draft Police Reform"
+ RUS_add_police_reform_progress_tt: "Modifies §YPolice Reform§! progress by [?RUS_add_police_reform_progress_var|.1%%Y=]."
+ RUS_closer_to_finishing_police_reform_tt: "§GWe will be closer to fully completing the Police Reform§!."
+ RUS_further_from_finishing_police_reform_tt: "§RWe will be further from fully completing the Police Reform§!."
+ RUS_100_police_reform_progress: "Has §Y100.0%§! of the §YPolice Reform§! progress"
+ RUS_not_100_police_reform_progress: "Not: Has §Y100.0%§! of the §YPolice Reform§! progress"
  RUS_settlement_in_FROM: "Settlement in [FROM.GetName]"
  RUS_currently_settling_a_state: "Currently settling a state"
  RUS_creation_of_insurance_funds: "Create Insurance Funds"
@@ -218,6 +226,7 @@
  RUS_tsardom_of_poland_2: "Tsardom of Poland"
  RUS_famine: "Famine"
  RUS_increased_conscription: "Increased Conscription"
+ RUS_new_police: "New Police"
 
  #Scripted triggers
 
@@ -240,6 +249,7 @@
  RUS_grand_fleet_programme: "Grand Fleet Programme"
  RUS_new_conscription_law: "New Conscription Law"
  RUS_sway_the_election: "Sway the Election"
+ RUS_complete_police_reform: "Complete Police Reform"
  RUS_secular_primary_schooling: "Secular Primary Schooling"
  RUS_higher_primary_schools: "Higher Primary Schools"
  RUS_universal_primary_schooling: "Universal Access to Primary Schooling"
