--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -418,7 +418,7 @@
  socialists_loyalty_tt: "[?socialists_loyalty|%%]"
 
  supportive: "§GLoyal§!"
- constructive: "§CConstructive§!"
+ constructive: "§7Constructive§!"
  opposition: "§OOpposition§!"
  obstruction: "§RObstructive§!"
 
