--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -175,7 +175,7 @@
  SWI_fascism:0 "Swiss Imperial Confederation"
  SWI_fascism_DEF:0 "the Swiss Imperial Confederation"
  SWI_democratic:0 "Switzerland"
- SWI_democratic_DEF:0 "Switzerland"
+ SWI_democratic_DEF:0 "the Swiss Confederation"
  SWI_neutrality:0 "Swiss Confederacy"
  SWI_neutrality_DEF:0 "the Swiss Confederacy"
  SWI_communism:0 "United Cantons"
