RAJ Extrasubcontinental Theatres + Reversed Files that were deleted during the merge UPDATE

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8375,6 +8375,16 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  organise_a_peaceful_protest_in_punjab:0 "Organise a Peaceful Protest in Punjab"
  organise_a_peaceful_protest_in_patna:0 "Organise a Peaceful Protest in Patna"
 
+ extrasubcontinental_theaters_category:0 "Extrasubcontinental Theaters"
+ decision_cost_CP_25_PP_10: "£command_power  §Y15§! £pol_power  §Y10§!"
+ decision_cost_CP_25_PP_10_blocked: "£command_power  §R15§! £pol_power  §Y10§!"
+ decision_cost_CP_25_PP_10_tooltip: "It costs £command_power  §Y15§! and £pol_power  §Y10§! to take the decision"
+ currently_preparing_a_new_theater:0 " Currently Preparing a New Theater"
+ recently_prepared_a_new_theater:0 " Recently Prepared a New Theater"
+ african_theater:0 "Prepare the African Theatre"
+ european_theater:0 "Prepare the European Theatre"
+ ottoman_theater:0 "Prepare the Ottoman Theatre"
+
  reinforce_the_caste_system:0 "Reinforce the Caste System"
  fight_against_the_caste_system:0 "Fight Against the Caste System"
  RAJ_arrest_political_leaders:0 "Arrest Political Leaders"
