--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10314,6 +10314,8 @@ RAJ_calcutta_dockyards:0 "Calcutta Dockyards"
 RAJ_calcutta_dockyards_desc:0 ""
 RAJ_the_path_to_mesopotamia:0 "The Path to Mesopotamia"
 RAJ_the_path_to_mesopotamia_desc:0 ""
+RAJ_the_path_to_mesopotamia_reward:0 "Modify '§YIndian Army§!' by\nInvasion Preparation Speed:§G +25.00%§!"
+
 RAJ_internal_security:0 "Internal Security"
 RAJ_internal_security_desc:0 ""
 RAJ_integrate_burma:0 "Integrate Burma"
