--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2815,7 +2815,7 @@ proto_fascism_banned:0 "Proto-Fascism Banned"
  RAJ_fight_for_the_empire_idea:0 "Fight for the Empire"
 
  RAJ_indian_army_dynamic:0 "Indian Army"
- RAJ_indian_army_dynamic_desc:0 "§Y''The British Government has undertaken to protect the dominions of the Native princes from invasion and even from rebellion within ; its army is organized for the defence not merely of British India, but of all possessions under the suzerainty of the King-Emperor.'' - Imperial Gazetteer of India§!\n\nThe term 'Indian Army' was first used informally to describe the broader 'Presidency Armies' of the Bengal, Madras and Bombay Armies. The Indian Army, raised as an independent army by the Government of India in 1895, gradually absorbed the three long-established Presidency Armies, fully integrating them in 1903. The same year, Lord Kitchener was appointed Commander-in-Chief of India and began what became known as the Kitchener Reforms. These reforms structured the modern Indian Army, completing the unification of the three former Presidency Armies as well as other forces, outlining the defence of the North-West Frontier against foreign aggression as the primary role of the army, and the maintenance of internal security as a secondary role, in support of the police.\n\nWith the reforms ending in 1909, the Indian Army was organised along British lines, although it always lagged behind in terms of equipment. Now a reformed force, the Indian Army has yet to see the light of a battlefield.\n\n§RIt would take a major conflict to close the gap.§!"
+ RAJ_indian_army_dynamic_desc:0 "§Y''The British Government has undertaken to protect the dominions of the Native princes from invasion and even from rebellion within ; its army is organized for the defence not merely of British India, but of all possessions under the suzerainty of the King-Emperor.'' - Imperial Gazetteer of India§!\n\nThe term 'Indian Army' was first used informally to describe the broader 'Presidency Armies' of the Bengal, Madras and Bombay Armies. The Indian Army, raised as an independent army by the Government of India in 1895, gradually absorbed the three long-established Presidency Armies, fully integrating them in 1903. The same year, Lord Kitchener was appointed Commander-in-Chief of India and began what became known as the Kitchener Reforms.\n\nThese reforms structured the modern Indian Army, completing the unification of the three former Presidency Armies as well as other forces, outlining the defence of the North-West Frontier against foreign aggression as the primary role of the army, and the maintenance of internal security as a secondary role, in support of the police. With the reforms ending in 1909, the Indian Army was organised along British lines, although it always lagged behind in terms of equipment. Now a reformed force, the Indian Army has yet to see the light of a battlefield.\n\n§RIt would take a major conflict to close the gap.§!"
 
  RAJ_caste_system:0 "Caste System"
  RAJ_caste_system_desc:0 "The caste system is a socio-political stratification of Indian society, taking its roots in ancient India. It divides the Indian population into different castes, assigned at birth, in order to determine individuals' roles within society. Transformed by various ruling elites during medieval India, it developed especially in the aftermath of the collapse of the Mughal Empire and the establishment of the British Raj. Our administration furthered this development, making rigid caste organisation a central mechanism of our colonial hold on the subcontinent. Since 1860, we incorporated the Indian caste system into our system of governance, granting administrative jobs and senior appointments only to Christians and people belonging to certain castes. While supported by the higher castes and nobility, granting us certain privileges, it remains a source of social unrest within the Indian population."
@@ -2855,6 +2855,15 @@ proto_fascism_banned:0 "Proto-Fascism Banned"
  
  RAJ_indian_boycott:0 "Indian Boycott"
  RAJ_indian_boycott_desc:0 ""
+
+ RAJ_african_theater:0 "African Theatre Preparations"
+ RAJ_african_theater_desc:0 "The Indian Army GHQ have recently prepared its supply lines in order to face the harsh climatic atmosphere of Africa."
+
+ RAJ_european_theater:0 "European Theatre Preparations"
+ RAJ_european_theater_desc:0 "The Indian Army GHQ have recently prepared its supply lines in order to face the stagnating frontlines of Europe."
+
+ RAJ_ottoman_theater:0 "Ottoman Theatre Preparations"
+ RAJ_ottoman_theater_desc:0 "The Indian Army GHQ have recently prepared its supply lines in order to face the Ottoman Empire in both Arabia and Mesopotamia."
 
  RAJ_anti_indian_immigration_laws:0 "Anti-Indian Immigration Laws"
  RAJ_anti_indian_immigration_laws_desc:0 ""
