--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1077,6 +1077,8 @@ evolutionary_nationalism_desc:0 "Evolutionary Nationalism perceives nationalism 
  CHL_communism_pos_party:0 "Convencion-POS"
  CHL_communism_pos_party_long:0 "Convencion Revolucionaria-Partido Obrero Socialista"
  CHL_ParNa_party:0 "Partido Nacionalista"
+ CHL_ParNa_party_d:0 "Partido Nacionalista-Liberal"
+ CHL_ParNa_party_n:0 "Partido Nacionalista-Conservador"
  
 
 
