--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2133,7 +2133,7 @@ ww1_chile.1.t:0 "President Pedro Montt Dies!"
  ww1_chile.1.d:0 "The president was sick of arteriosclerosis and arrhythmia, and each day it got worse.\n\nOn 16 of July, he embarked for Germany, with his wife and his doctor, hoping that the German doctors could treat him.\nThe trip was very tiring and the last strength that he had was lost.\n\nHe came to Bremen on the 16 of August and was stationed in a hotel with his small entourage. Near midnight of that day, he went to the bathroom. His private secretary noticed that he did not come back after a long time, went to look for him. When he got to the bathroom, he found him dead.\nThe probable cause of death was a heart attack or a stroke."
  ww1_chile.1.a:0 "He shouldn't have ignored the advice of Father Tadeo."
  ww1_chile.2.t:0 "President Elías Fernández Albano Dies!"
- ww1_chile.2.d:0 "Fernández caught a cold during Montt's funeral, which soon turned into pulmonary, causing him to die of heart failure after only three weeks in office.\nThe country is stunned, there are only two weeks left until the century of Chilian independence, and there is no president to celebrate it."
+ ww1_chile.2.d:0 "Fernández Albano was hella sick, in fact, there's reports he told our late president pedro montt montt he was even sicker than him, anyway, he caught a cold during Montt's funeral, which soon turned into pulmonary, causing him to die of heart failure after only three weeks in office.\nThe country is stunned, there are only two weeks left until the century of Chilean independence, and there is no president to celebrate it."
  ww1_chile.2.a:0 "We shall call for elections."
  ww1_chile.3.t:0 "[GetYear] Chilean Presidential Election"
  ww1_chile.3.d:0 "Political parties agreed on presenting a single candidate - Ramón Barros - as a symbol of unity in celebration of Chile's first centenary of independence."
@@ -2214,7 +2214,7 @@ ww1_chile.27.a:0 "A Century Of Glorious Independence!"
 ww1_chile.27.b:0 "There's Nothing To Celebrate"
 ww1_chile.28.t:0 "Chile Celebrates 100 Years Of Independence"
 ww1_chile.28.d:0 "Centennial celebration activities began to be scheduled at the beginning of the year. The first step consisted of inviting the delegations of friendly countries; The Argentine delegation committed its attendance led by the President of the Republic. On the other hand, various public works, whose main objective was to beautify the country's cities, were inaugurated in the year of the centenary, including the Palace of Fine Arts and the Mapocho Station in Santiago. Various commemorative monuments were also inaugurated, many of which were donations from foreign colonies in Chile. That same year, the installation work on the sewage systems was completed and the new public lighting in Santiago was turned on. As part of the celebrations, a series of documents related to the events of September 18, 1810, Independence, and the main aspects of the hundred years of national history were published."
-ww1_chile.28.a:0 "lol who cares"
+ww1_chile.28.a:0 "What A Great Country"
 ww1_chile.earthquake.a:0 "Damm"
 ww1_chile.29.t:0 "The Iquique Earthquake"
 ww1_chile.29.d:0 "Yesterday Iquique Was struck with an earthquake, two thousand people have died and the city is ruins, scientists say the scale of the earthquake was of 7.3. damm"
@@ -2243,10 +2243,30 @@ ww1_chile.36.a:0 "We'll See..."
 ww1_chile.37.t:0 "Our President Pedro Montt Montt Leaves for argentina"
 ww1_chile.37.d:0 "Our President Pedro Montt Montt Leaves for argentina, he'll be leaving for 11 days, leaving Ismael Tocornal In charge, we hope his health stays good and has a good time in their own century of independence celebrations"
 ww1_chile.37.a:0 "he aint gonna die...right?"
-
 ww1_chile.38.t:0 "Pedro Montt has returned"
 ww1_chile.38.d:0 "he's returned from argentina, hurray!"
 ww1_chile.38.a:0 "oh, bro... what a relief, he didnt die"
+ww1_chile.39.t:0 "Another Problem To Deal With"
+ww1_chile.39.d:0 "chile right now is a fucking two-party oligarchy, and it aint even two party enough, thats why, we gotta deal with them. how? well, we are gonna tell them theyll get their own peace of the british saltpeter cake in exchange of their support "
+ww1_chile.39.a:0 "let's see."
+ww1_chile.40.t:0 "they've accepted"
+ww1_chile.40.d:0 "good, this means no civil war"
+ww1_chile.40.a:0 "boy, little they know..."
+ww1_chile.41.t:0 "Who'll Lead Us"
+ww1_chile.41.de:0 "everythings done, we have taken control of every aspect of the country,but we still lack a leader, who's gonna be the guy?"
+ww1_chile.41.a:0 "The Teacher"
+ww1_chile.41.b:0 "The Historian"
+ww1_chile.41.c:0 "The "Tolerant" Liberals"
+ww1_chile.41.d:0 "The Politician"
+ww1_chile.41.e:0 "The Doctor"
+ww1_chile.42.t:0 "who from the tolerant liberals"
+ww1_chile.42.d:0 ""
+ww1_chile.42.a:0 "we'll stay with subercauseaux"
+ww1_chile.42.b:0 "The Lawyer"
+ww1_chile.43.t:0 "The Storming Of The Moneda Palace"
+ww1_chile.43.d:0 "Chile has experienced a significant nationalist uprising that dramatically altered its political landscape. Fueled by widespread discontent with the entrenched oligarchic rule and inspired by burgeoning nationalist sentiments, a coalition of military leaders, intellectuals, and disenfranchised working-class citizens rose against the government. The movement, galvanized by promises of economic reforms, social justice, and national rejuvenation, quickly gained momentum. In a series of swift and strategically coordinated actions, nationalist forces seized control of key cities, culminating in the storming of the presidential palace in Santiagothe nationalists hav firmly established a new regime, ushering in an era characterized by fervent patriotism, extensive industrialization efforts, and significant social reforms aimed at reducing inequality and fostering national unity. This uprising marked the beginning of a transformative period in Chilean history, redefining the nation's identity and aspirations."
+ww1_chile.43.a:0 "i hope this wont interfere with our saltpeter affairs"
+
 
 
 
