trying things with tanks

--- a/localisation/english/ww1_equipment_l_english.yml
+++ b/localisation/english/ww1_equipment_l_english.yml
@@ -207,16 +207,22 @@
  #FRA_tank_design_short:0 ""
 ####################################################################################################### FRANCE FRENCH CHARS
  FRA_light_tank_equipment_1:0 "Renault FT"
- FRA_light_tank_equipment_1_short:0 "FT"
+ FRA_light_tank_equipment_1_short:0 "Renault FT"
  FRA_light_tank_equipment_1_canon:0 "FT Char Canon"
  FRA_light_tank_equipment_2:0 "Renault FT (1918)"
  FRA_light_tank_equipment_2_short:0 "FT (1918)"
  FRA_light_tank_equipment_3:0 "Renault NC-1"
  FRA_light_tank_equipment_3_short:0 "NC-1"
 
+ FRA_light_tank_signal_equipment_0:0 "Renault FT TSF"
+ FRA_light_tank_signal_equipment_0_short:0 "Renault FT TSF"
+ FRA_light_tank_signal_equipment_1:0 "Renault FT TSF"
+ FRA_light_tank_signal_equipment_1_short:0 "Renault FT TSF"
  FRA_light_tank_equipment_1_signal:0 "Renault FT TSF"
  FRA_light_tank_equipment_1_signal_short:0 "FT TSF"
 
+ FRA_light_tank_artillery_equipment_0:0 "Renault FT 75 BS"
+FRA_light_tank_artillery_equipment_0_short:0 "FT 75 BS"
  FRA_light_tank_artillery_equipment_1:0 "Renault FT 75 BS"
  FRA_light_tank_artillery_equipment_1_short:0 "FT 75 BS"
  FRA_light_tank_artillery_equipment_2:0 "Char Peugeot"
